v3.4 - scroll horizontal fixed for filter on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -626,6 +626,7 @@ button {
   font-size: 18px;
   font-weight: 700;
   text-shadow: 0 0 15px var(--black);
+  margin-bottom:30px !important;
 }
 
 .slick-prev, .slick-next {
@@ -739,6 +740,7 @@ button {
 
   .slick-art h3 {
     font-size: 16px;
+    margin-bottom: 20px !important;
   }
 
   .container-news-no-img-top {
@@ -924,11 +926,28 @@ button {
     top:60px;
   }
 
+  .displayFilter-faded {
+    position: absolute;
+    right: 0;
+    top: 0px;
+    height: 59px;
+    width: 55px;
+    background: linear-gradient(to right, transparent, #e5e7eb);
+    z-index: 1;
+    display: block;
+  }
 
 
-  .menu-item:last-child {
+
+  .menu-item:last-child
+  {
     padding-right: 40px;
   }
+
+  .displayFilterElement:last-child {
+    margin-right: 40px !important;
+  }
+
 
   .hamburger {
     display: block;
@@ -1136,26 +1155,38 @@ button {
 }
 
 
-.supra {
+.supra,
+.supra-desktop
+{
   position: absolute;
   top: 30px;
   left: 30px;
   background: var(--white);
-  border-radius: 4px;
-  padding: 3px 10px;
-  font-size: 10px;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 12px;
   font-family: var(--title-font-family);
   z-index: 1;
   color: var(--black);
   display: none;
   position: relative;
-  top:0px;
+  top:-5px;
   left:15px;
+}
+
+
+.supra-desktop {
+  display:inline-block;
+  margin-right:5px !important
 }
 
 @media only screen and (max-width: 600px) {
   .supra {
     display: inline-block;
+  }
+  .supra,
+  .supra-desktop {
+    font-size:10px;
   }
 }
 
@@ -1402,29 +1433,42 @@ button {
 }
 
 .displayFilter {
-  display: flex;
   background: transparent !important;
-  max-width: 1560px;
+  max-width: 1540px;
   gap: 10px;
-  overflow-x: scroll;
   white-space: nowrap;
   border-radius: 0 !important;
   margin:auto !important;
   font-size: 12px;  
-  padding: 10px 10px 0 10px;
-  flex-wrap: wrap;
+  padding: 0px 0px 15px 0px;
   align-items: center;
+  height:40px;
+  overflow-y:hidden;
+  overflow-x: auto;
+  position: relative;
+  scrollbar-visibility: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;  
+  border-bottom:1px solid black;
+  margin-bottom:10px !important;
 }
+
+
 
 .displayFilterElement {
   background: white !important;
-  padding:2px 10px;
+  padding:4px 8px;
   border-radius:5px;
-  display: flex;
+  display: flex !important;
   align-items: center;
   gap:3px;
 }
 
+.x {
+  margin-left: 4px !important;
+  cursor: pointer;
+  color: red;
+}
 
 .filter-panel {
   font-size:12px;
@@ -1461,6 +1505,9 @@ button {
   .containerDisplayFilter {
     top: 89px;
   }
+  .displayFilter {
+    padding: 0px 15px 15px 15px;
+  }  
 }
 
 
